2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (TARGET): Link to the TMDA plugin for SquirrelMail.
	
	* config-server.ht (Links): Include 'preline' in dot-qmail
	instructions.
	
2002-02-22  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Docs and an example for new -autodbm flag on
	the 'from-file' and 'to-file' sources.

2002-02-21  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Move 'from*' sources to list of incoming and
	outgoing sources.

2002-02-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update link to bbdb-normalize-tmda-addresses.
	
	* features.ht (Links): Mention OpenBSD port.

	* download.ht: Link to OpenBSD port.

2002-02-20  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Documented the new argument syntax for certain
	sources.

2002-02-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Generalize the pending queue purge question to include
	information about releasing and viewing as well.

	* download.ht (Links): Update Debian package link.

	* features.ht (Links): Mention NetBSD package.

	* download.ht: Link to the NetBSD package.

2002-02-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht: Update FreeBSD port URL; link to Mandrake Linux
	Contribs.
	
2002-02-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update pending queue question to use tmda-pending rather
	than the deprecated tmda-clean.

2002-02-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* install.ht: Version information for post-installation success
	reports now comes from tmda-keygen -V.

2002-02-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht (Links): Link to Arcady Genkin's Gentoo Linux
	package.
	
2002-02-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entry: "Why isn't TMDA written in Perl, C, C++,
	Java, etc..?"
	