@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Feb 20 13:10:02 2002 -->
+<!-- Mon Feb 25 17:58:36 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -151,24 +151,29 @@ Python</a>: an interpreted, interactive, object-oriented programming language.
 <li>Optional automatic whitelisting of confirmed senders.
 <br><br>
 
-<li>Supports MUA-independent, site-wide installations using relay rewriting, including
-    non-unix clients such as Microsoft Windows.<br><br>
+<li>Supports MUA-independent, site-wide installations using relay
+rewriting, including non-unix clients such as Microsoft
+Windows.<br><br>
 
 <li>Package installation available for Linux, and Free/Net/OpenBSD.<br><br>
 
 <li>Supports vpopmail and vmailmgr.<br><br>
 
-<li>Pattern matching using Unix shell-style wildcard characters.<br><br>
+<li>Flexible <a href="config-filter.html">filtering language</a>
+allowing fine-grained control over how incoming and outgoing mail is
+disposed of.<br><br>
+
+<li>Local mail delivery, including the ability to deliver to a program
+(pipe), or forward to an e-mail address.<br><br>
 
 <li>Supports DBM and <a href="http://cr.yp.to/cdb.html" TARGET="Resource Window">
-CDB</a> databases.<br><br>
+CDB</a> databases, including on-demand auto-regeneration of DB files.<br><br>
 
 <li>Optional delivery logging.<br><br>
 
 <li>Easy customization of confirmation messages through templates.<br><br>
 
-<li>Uses 
-<a href="http://www-cse.ucsd.edu/users/mihir/papers/hmac.html" TARGET="Resource Window">
+<li>Use of <a href="http://www.faqs.org/rfcs/rfc2104.html" TARGET="Resource Window">
 HMAC</a> (Hashed Message Authentication Codes) for "cookie" generation and verification.
 <br><br>
 
